[gd_scene load_steps=13 format=2]

[ext_resource path="res://addons/texture_fonts/UI/Components/Vector2Edit.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/texture_fonts/Assets/ExternalLink.svg" type="Texture" id=2]
[ext_resource path="res://addons/texture_fonts/UI/FontSettings.gd" type="Script" id=3]
[ext_resource path="res://addons/texture_fonts/UI/Components/TextureViewer/TextureViewer.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/texture_fonts/Assets/Fonts/RobotoMono/RobotoMono-Medium.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://addons/texture_fonts/UI/FontEditor.gd" type="Script" id=6]
[ext_resource path="res://addons/texture_fonts/UI/FileSettings.gd" type="Script" id=7]
[ext_resource path="res://addons/texture_fonts/UI/Preview.gd" type="Script" id=8]
[ext_resource path="res://addons/texture_fonts/UI/HelpButton.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
resource_local_to_scene = true
bg_color = Color( 0.12549, 0.141176, 0.192157, 1 )

[sub_resource type="StyleBoxFlat" id=3]
resource_local_to_scene = true
bg_color = Color( 0.100392, 0.112941, 0.153726, 1 )

[node name="FontEditor" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 280 )
size_flags_stretch_ratio = 2.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
margin_right = 1048.0
margin_bottom = 628.0
size_flags_horizontal = 3
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Textures" type="HSplitContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Files" type="VBoxContainer" parent="TabContainer/Textures"]
margin_right = 254.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeadingBox" type="HBoxContainer" parent="TabContainer/Textures/Files"]
margin_right = 254.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Textures/Files/HeadingBox"]
margin_top = 3.0
margin_right = 30.0
margin_bottom = 17.0
text = "Files"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="TabContainer/Textures/Files/HeadingBox"]
margin_left = 34.0
margin_right = 213.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="AddTextureButton" type="Button" parent="TabContainer/Textures/Files/HeadingBox"]
margin_left = 217.0
margin_right = 254.0
margin_bottom = 20.0
text = "Add"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="TabContainer/Textures/Files/HeadingBox/AddTextureButton"]
margin_right = 400.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 300 )
size_flags_vertical = 3
window_title = "Open a File"
resizable = true
mode = 0
filters = PoolStringArray( "*.png, *.bmp, *.dds, *.exr, *.hdr, *.jpg, *.jpeg, *.tga, *.svg, *.svgz, *.webp; Textures" )

[node name="Panel" type="Panel" parent="TabContainer/Textures/Files"]
margin_top = 24.0
margin_right = 254.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Textures/Files/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileList" type="VBoxContainer" parent="TabContainer/Textures/Files/Panel/ScrollContainer"]
margin_right = 254.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileSettings" type="MarginContainer" parent="TabContainer/Textures"]
margin_left = 266.0
margin_right = 1040.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Textures/FileSettings"]
margin_right = 774.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RectSettings" type="HBoxContainer" parent="TabContainer/Textures/FileSettings/VBoxContainer"]
margin_right = 774.0
margin_bottom = 42.0
custom_constants/separation = 12

[node name="Size" parent="TabContainer/Textures/FileSettings/VBoxContainer/RectSettings" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 183.0
margin_bottom = 42.0
min_value = Vector2( 1, 1 )
max_value = Vector2( 100, 100 )
value = Vector2( 1, 1 )
label = "Rect Size"

[node name="Gap" parent="TabContainer/Textures/FileSettings/VBoxContainer/RectSettings" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 195.0
margin_right = 378.0
margin_bottom = 42.0
min_value = Vector2( 0, 0 )
max_value = Vector2( 100, 100 )
value = Vector2( 0, 0 )
label = "Rect Gap"

[node name="Offset" parent="TabContainer/Textures/FileSettings/VBoxContainer/RectSettings" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 390.0
margin_right = 573.0
margin_bottom = 42.0
min_value = Vector2( 0, 0 )
max_value = Vector2( 100, 100 )
value = Vector2( 0, 0 )
label = "Texture Offset"

[node name="Scaling" type="VBoxContainer" parent="TabContainer/Textures/FileSettings/VBoxContainer/RectSettings"]
margin_left = 585.0
margin_right = 741.0
margin_bottom = 42.0

[node name="HeadingContainer" type="HBoxContainer" parent="TabContainer/Textures/FileSettings/VBoxContainer/RectSettings/Scaling"]
margin_right = 156.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Textures/FileSettings/VBoxContainer/RectSettings/Scaling/HeadingContainer"]
margin_right = 103.0
margin_bottom = 14.0
text = "Upscale Texture"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Textures/FileSettings/VBoxContainer/RectSettings/Scaling/HeadingContainer"]
margin_left = 107.0
margin_right = 156.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Textures/FileSettings/VBoxContainer/RectSettings/Scaling"]
margin_top = 18.0
margin_right = 156.0
margin_bottom = 42.0

[node name="Scale" type="SpinBox" parent="TabContainer/Textures/FileSettings/VBoxContainer/RectSettings/Scaling/HBoxContainer"]
margin_right = 74.0
margin_bottom = 24.0
min_value = 1.0
max_value = 10.0
value = 1.0
suffix = "x"

[node name="Interpolation" type="OptionButton" parent="TabContainer/Textures/FileSettings/VBoxContainer/RectSettings/Scaling/HBoxContainer"]
margin_left = 78.0
margin_right = 156.0
margin_bottom = 24.0
text = "Bilinear"
items = [ "Bilinear", null, false, 0, null, "Cubic", null, false, 1, null, "Lanczos", null, false, 2, null, "Nearest", null, false, 3, null, "Trilinear", null, false, 4, null ]
selected = 0

[node name="HSplitContainer" type="HSplitContainer" parent="TabContainer/Textures/FileSettings/VBoxContainer"]
margin_top = 46.0
margin_right = 774.0
margin_bottom = 592.0
size_flags_vertical = 3

[node name="HBoxContainer" type="VBoxContainer" parent="TabContainer/Textures/FileSettings/VBoxContainer/HSplitContainer"]
margin_right = 381.0
margin_bottom = 546.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeadingBox" type="HBoxContainer" parent="TabContainer/Textures/FileSettings/VBoxContainer/HSplitContainer/HBoxContainer"]
margin_right = 381.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="CharactersLabel" type="Label" parent="TabContainer/Textures/FileSettings/VBoxContainer/HSplitContainer/HBoxContainer/HeadingBox"]
margin_right = 135.0
margin_bottom = 14.0
text = "Characters in Texture"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Textures/FileSettings/VBoxContainer/HSplitContainer/HBoxContainer/HeadingBox"]
margin_left = 139.0
margin_right = 381.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="TextEdit" type="TextEdit" parent="TabContainer/Textures/FileSettings/VBoxContainer/HSplitContainer/HBoxContainer"]
margin_top = 18.0
margin_right = 381.0
margin_bottom = 546.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
draw_tabs = true
draw_spaces = true

[node name="TextureViewer" parent="TabContainer/Textures/FileSettings/VBoxContainer/HSplitContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 393.0
margin_right = 774.0
margin_bottom = 546.0

[node name="NoSelectionOverlay" type="ColorRect" parent="TabContainer/Textures/FileSettings"]
margin_right = 774.0
margin_bottom = 592.0
color = Color( 0.14902, 0.172549, 0.231373, 0.784314 )

[node name="Label" type="Label" parent="TabContainer/Textures/FileSettings/NoSelectionOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Add or Select a Texture"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Font Settings" type="HSplitContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 3 )

[node name="HSplitContainer" type="HSplitContainer" parent="TabContainer/Font Settings"]
margin_right = 687.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Settings" type="VBoxContainer" parent="TabContainer/Font Settings/HSplitContainer"]
margin_right = 223.0
margin_bottom = 592.0
size_flags_horizontal = 3

[node name="HeadingBox" type="HBoxContainer" parent="TabContainer/Font Settings/HSplitContainer/Settings"]
margin_right = 223.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Font Settings/HSplitContainer/Settings/HeadingBox"]
margin_right = 83.0
margin_bottom = 14.0
text = "Font Settings"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Font Settings/HSplitContainer/Settings/HeadingBox"]
margin_left = 87.0
margin_right = 223.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Font Settings/HSplitContainer/Settings"]
margin_top = 18.0
margin_right = 223.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="Grid" type="GridContainer" parent="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 219.0
margin_bottom = 570.0
columns = 2

[node name="Label" type="Label" parent="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer/Grid"]
margin_top = 5.0
margin_right = 106.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Height:"

[node name="Height" type="SpinBox" parent="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer/Grid"]
margin_left = 110.0
margin_right = 215.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 4096.0
value = 1.0

[node name="Label2" type="Label" parent="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer/Grid"]
margin_top = 33.0
margin_right = 106.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "Gap:"

[node name="Gap" type="SpinBox" parent="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer/Grid"]
margin_left = 110.0
margin_top = 28.0
margin_right = 215.0
margin_bottom = 52.0
size_flags_horizontal = 3
min_value = -4096.0
max_value = 4096.0

[node name="Label3" type="Label" parent="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer/Grid"]
margin_top = 61.0
margin_right = 106.0
margin_bottom = 75.0
size_flags_horizontal = 3
text = "Horizontal Align:"

[node name="HorizontalAlign" type="SpinBox" parent="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer/Grid"]
margin_left = 110.0
margin_top = 56.0
margin_right = 215.0
margin_bottom = 80.0
size_flags_horizontal = 3
min_value = -4096.0
max_value = 4096.0

[node name="Label6" type="Label" parent="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer/Grid"]
margin_top = 89.0
margin_right = 106.0
margin_bottom = 103.0
size_flags_horizontal = 3
text = "Vertical Align:"

[node name="VerticalAlign" type="SpinBox" parent="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer/Grid"]
margin_left = 110.0
margin_top = 84.0
margin_right = 215.0
margin_bottom = 108.0
size_flags_horizontal = 3
min_value = -4096.0
max_value = 4096.0

[node name="Label4" type="Label" parent="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer/Grid"]
margin_top = 117.0
margin_right = 106.0
margin_bottom = 131.0
size_flags_horizontal = 3
text = "Ascent:"

[node name="Ascent" type="SpinBox" parent="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer/Grid"]
margin_left = 110.0
margin_top = 112.0
margin_right = 215.0
margin_bottom = 136.0
size_flags_horizontal = 3
max_value = 4096.0

[node name="Label5" type="Label" parent="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer/Grid"]
margin_top = 145.0
margin_right = 106.0
margin_bottom = 159.0
text = "Monospaced:"

[node name="MonoSpaced" type="CheckBox" parent="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer/Grid"]
margin_left = 110.0
margin_top = 140.0
margin_right = 215.0
margin_bottom = 164.0

[node name="ListSettings" type="VBoxContainer" parent="TabContainer/Font Settings/HSplitContainer"]
margin_left = 235.0
margin_right = 687.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="VSplitContainer" type="VSplitContainer" parent="TabContainer/Font Settings/HSplitContainer/ListSettings"]
margin_right = 452.0
margin_bottom = 592.0
size_flags_vertical = 3

[node name="Kerning" type="VBoxContainer" parent="TabContainer/Font Settings/HSplitContainer/ListSettings/VSplitContainer"]
margin_right = 452.0
margin_bottom = 230.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="HeadingBox" type="HBoxContainer" parent="TabContainer/Font Settings/HSplitContainer/ListSettings/VSplitContainer/Kerning"]
margin_right = 452.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="KerningLabel" type="Label" parent="TabContainer/Font Settings/HSplitContainer/ListSettings/VSplitContainer/Kerning/HeadingBox"]
margin_top = 3.0
margin_right = 83.0
margin_bottom = 17.0
text = "Kerning Pairs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="TabContainer/Font Settings/HSplitContainer/ListSettings/VSplitContainer/Kerning/HeadingBox"]
margin_left = 87.0
margin_right = 411.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="AddKerningButton" type="Button" parent="TabContainer/Font Settings/HSplitContainer/ListSettings/VSplitContainer/Kerning/HeadingBox"]
margin_left = 415.0
margin_right = 452.0
margin_bottom = 20.0
text = "Add"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Font Settings/HSplitContainer/ListSettings/VSplitContainer/Kerning"]
margin_top = 24.0
margin_right = 452.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Font Settings/HSplitContainer/ListSettings/VSplitContainer/Kerning/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 448.0
margin_bottom = 202.0

[node name="KerningList" type="VBoxContainer" parent="TabContainer/Font Settings/HSplitContainer/ListSettings/VSplitContainer/Kerning/MarginContainer/ScrollContainer"]
margin_right = 444.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CharSettings" type="VBoxContainer" parent="TabContainer/Font Settings/HSplitContainer/ListSettings/VSplitContainer"]
margin_top = 242.0
margin_right = 452.0
margin_bottom = 592.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="HeadingBox" type="HBoxContainer" parent="TabContainer/Font Settings/HSplitContainer/ListSettings/VSplitContainer/CharSettings"]
margin_right = 452.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Font Settings/HSplitContainer/ListSettings/VSplitContainer/CharSettings/HeadingBox"]
margin_top = 3.0
margin_right = 76.0
margin_bottom = 17.0
text = "Char Setting"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="TabContainer/Font Settings/HSplitContainer/ListSettings/VSplitContainer/CharSettings/HeadingBox"]
margin_left = 80.0
margin_right = 411.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="AddCharSettingButton" type="Button" parent="TabContainer/Font Settings/HSplitContainer/ListSettings/VSplitContainer/CharSettings/HeadingBox"]
margin_left = 415.0
margin_right = 452.0
margin_bottom = 20.0
text = "Add"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Font Settings/HSplitContainer/ListSettings/VSplitContainer/CharSettings"]
margin_top = 24.0
margin_right = 452.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Font Settings/HSplitContainer/ListSettings/VSplitContainer/CharSettings/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 448.0
margin_bottom = 322.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="SettingList" type="VBoxContainer" parent="TabContainer/Font Settings/HSplitContainer/ListSettings/VSplitContainer/CharSettings/MarginContainer/ScrollContainer"]
margin_right = 444.0
margin_bottom = 318.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Preview" type="VBoxContainer" parent="TabContainer/Font Settings"]
margin_left = 699.0
margin_right = 1040.0
margin_bottom = 592.0
size_flags_horizontal = 3
script = ExtResource( 8 )

[node name="HeadingBox" type="HBoxContainer" parent="TabContainer/Font Settings/Preview"]
margin_right = 341.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Font Settings/Preview/HeadingBox"]
margin_top = 5.0
margin_right = 50.0
margin_bottom = 19.0
text = "Preview"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Font Settings/Preview/HeadingBox"]
margin_left = 54.0
margin_right = 195.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Scale" type="SpinBox" parent="TabContainer/Font Settings/Preview/HeadingBox"]
margin_left = 199.0
margin_right = 273.0
margin_bottom = 24.0
min_value = 100.0
max_value = 1000.0
step = 10.0
value = 100.0
exp_edit = true
suffix = "%"

[node name="ColorPickerButton" type="ColorPickerButton" parent="TabContainer/Font Settings/Preview/HeadingBox"]
margin_left = 277.0
margin_right = 341.0
margin_bottom = 24.0
rect_min_size = Vector2( 64, 0 )
color = Color( 0.12549, 0.141176, 0.192157, 1 )

[node name="MarginContainer" type="ScrollContainer" parent="TabContainer/Font Settings/Preview"]
margin_top = 28.0
margin_right = 341.0
margin_bottom = 592.0
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="TabContainer/Font Settings/Preview/MarginContainer"]
margin_right = 341.0
margin_bottom = 564.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 1048.0
margin_bottom = 628.0
mouse_filter = 2

[node name="HelpButton" type="Button" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -63.0
margin_bottom = 20.0
text = "Help"
align = 0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/HelpButton"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_right = -4.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TabContainer/Textures/Files/HeadingBox/AddTextureButton" to="." method="_on_AddTextureButton_pressed"]
[connection signal="file_selected" from="TabContainer/Textures/Files/HeadingBox/AddTextureButton/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="value_changed" from="TabContainer/Textures/FileSettings/VBoxContainer/RectSettings/Size" to="TabContainer/Textures/FileSettings" method="_on_Size_value_changed"]
[connection signal="value_changed" from="TabContainer/Textures/FileSettings/VBoxContainer/RectSettings/Gap" to="TabContainer/Textures/FileSettings" method="_on_Gap_value_changed"]
[connection signal="value_changed" from="TabContainer/Textures/FileSettings/VBoxContainer/RectSettings/Offset" to="TabContainer/Textures/FileSettings" method="_on_Offset_value_changed"]
[connection signal="value_changed" from="TabContainer/Textures/FileSettings/VBoxContainer/RectSettings/Scaling/HBoxContainer/Scale" to="TabContainer/Textures/FileSettings" method="_on_Scale_value_changed"]
[connection signal="item_selected" from="TabContainer/Textures/FileSettings/VBoxContainer/RectSettings/Scaling/HBoxContainer/Interpolation" to="TabContainer/Textures/FileSettings" method="_on_OptionButton_item_selected"]
[connection signal="text_changed" from="TabContainer/Textures/FileSettings/VBoxContainer/HSplitContainer/HBoxContainer/TextEdit" to="TabContainer/Textures/FileSettings" method="_on_TextEdit_text_changed"]
[connection signal="value_changed" from="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer/Grid/Height" to="TabContainer/Font Settings" method="_on_Height_value_changed"]
[connection signal="value_changed" from="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer/Grid/Gap" to="TabContainer/Font Settings" method="_on_Gap_value_changed"]
[connection signal="value_changed" from="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer/Grid/HorizontalAlign" to="TabContainer/Font Settings" method="_on_HorizontalAlign_value_changed"]
[connection signal="value_changed" from="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer/Grid/VerticalAlign" to="TabContainer/Font Settings" method="_on_VerticalAlign_value_changed"]
[connection signal="value_changed" from="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer/Grid/Ascent" to="TabContainer/Font Settings" method="_on_Ascent_value_changed"]
[connection signal="toggled" from="TabContainer/Font Settings/HSplitContainer/Settings/MarginContainer/Grid/MonoSpaced" to="TabContainer/Font Settings" method="_on_MonoSpaced_toggled"]
[connection signal="pressed" from="TabContainer/Font Settings/HSplitContainer/ListSettings/VSplitContainer/Kerning/HeadingBox/AddKerningButton" to="TabContainer/Font Settings" method="_on_AddKerningButton_pressed"]
[connection signal="pressed" from="TabContainer/Font Settings/HSplitContainer/ListSettings/VSplitContainer/CharSettings/HeadingBox/AddCharSettingButton" to="TabContainer/Font Settings" method="_on_AddCharSettingButton_pressed"]
[connection signal="value_changed" from="TabContainer/Font Settings/Preview/HeadingBox/Scale" to="TabContainer/Font Settings" method="_on_Scale_value_changed"]
[connection signal="color_changed" from="TabContainer/Font Settings/Preview/HeadingBox/ColorPickerButton" to="TabContainer/Font Settings" method="_on_ColorPickerButton_color_changed"]
[connection signal="text_changed" from="TabContainer/Font Settings/Preview/MarginContainer/TextEdit" to="TabContainer/Font Settings" method="_on_TextEdit_text_changed"]
